[package]
name = "bhv"
version = "0.1.2"
edition = "2021"
authors = ["Terens Tare <terens.t17@gmail.com>"]
description = "A crate providing means to create and use Behavior Trees"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
